--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "socket-chat",
   "version": "0.1.0",
   "dependencies": {
-    "express": ">= 2.4.6",
-    "socket.io": ">= 0.8.4"
+    "express":   ">= 2.4.6",
+    "socket.io": ">= 0.8.4",
+    "jade":      ">= 0.15.4"
   }
 }
