--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "express":   ">= 2.4.6",
     "socket.io": ">= 0.8.4",
-    "jade":      ">= 0.15.4"
+    "jade":      ">= 0.15.4",
+    "redis":     ">= 0.6.7"
   }
 }
